--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/onetomanydb
+spring.datasource.url=jdbc:postgresql://containers-us-west-200.railway.app:7610/railway
 spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.password=BAGTTANKJYWi9hERZpMU
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
